# nexus-control

./: README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/core/: event_loop.rs  mod.rs  power_monitor.rs
src-tauri/src/hal/: device.rs  mod.rs  traits.rs
src-tauri/src/hal/cooling/: hid_cooling.rs  mod.rs
src-tauri/src/hal/gpu/: adl_backend.rs  mod.rs  nvapi_backend.rs
src-tauri/src/hal/lighting/: mod.rs  openrgb_backend.rs
src-tauri/src/ipc/: commands.rs  error.rs  mod.rs
src-tauri/src/models/: cooling.rs  gpu.rs  lighting.rs  mod.rs  profile.rs  settings.rs
src-tauri/src/service/: device_manager.rs  mod.rs  profile_manager.rs  safety_validator.rs
src/components/Cooling/: AlarmConfigPanel.tsx  CoolingPage.tsx  PumpControlPanel.tsx  WaterFanCurveEditor.tsx
src/components/Dashboard/: CoolingCard.tsx  DashboardPage.tsx  GpuCard.tsx  LightingCard.tsx
src/components/GPU/: FanCurveEditor.tsx  GpuPage.tsx  OverclockPanel.tsx
src/components/Layout/: AppLayout.tsx
src/components/Lighting/: LightingPage.tsx  LightingPreview.tsx  PresetManager.tsx  ZoneConfigPanel.tsx
src/components/Settings/: SettingsPage.tsx
src/hooks/: useHardwareStatus.ts
src/pages/: NotFound.tsx
src/types/: ipc.ts
test-dir/: test.txt
