[package]
name = "nexus-control"
version = "0.1.0"
edition = "2021"
description = "NexusControl - Hardware monitoring and control desktop application"
authors = ["NexusControl Team"]

[lib]
name = "nexus_control"
path = "src/lib.rs"

[[bin]]
name = "nexus-control"
path = "src/main.rs"

[dependencies]
# Tauri
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-updater = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Hardware communication (Phase 2+, stubs for now)
# hidapi = "2"        # USB HID communication
# adl-sys = "0.2"     # AMD Display Library FFI

# Logging
log = "0.4"
env_logger = "0.11"

# Serialization
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

# Error handling
thiserror = "2"

# File system
home = "0.5"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
opt-level = 2
lto = true
strip = true
codegen-units = 1
